--- a/src/components/sources/sources.css
+++ b/src/components/sources/sources.css
@@ -9,7 +9,7 @@
 }
 
 .source_name {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Cinzel', serif;
     color: #f72323;
 }
 
@@ -19,9 +19,9 @@
 }
 
 .source_desc {
-    font-family: 'Open Sans Condensed', serif;
+    font-family: 'Candara', serif;
 }
 
 .source_link {
- font-family: "Cinzel", serif;
+ font-family: "Antic Didone", serif;
 }
